# mdbook-indexing

./: CHANGELOG.md  Cargo.toml  README.md  makefile
.github/workflows/: ci.yml
src/: main.rs
testbook/: book.toml  expected_index.html
testbook/src/: SUMMARY.md  chapter1.md  indexing.md
