[package]
name = "mdbook-indexing"
version = "0.1.2"
authors = ["David Drysdale <dmd@lurklurk.org>"]
edition = "2018"
license = "Apache-2.0"
description = "mdbook preprocessor for index generation"
repository = "https://github.com/daviddrysdale/mdbook-indexing"
keywords = ["mdbook", "index"]
categories = ["text-processing"]

[dependencies]
clap = "2.*"
env_logger = "0.11.*"
lazy_static = "1.*"
log = "0.4.*"
mdbook = "0.4.*"
regex = "1.*"
serde_json = "1.*"
toml = "0.5.*"
