[package]
name = "mdbook-indexing"
version = "0.2.0"
authors = ["David Drysdale <dmd@lurklurk.org>"]
edition = "2018"
license = "Apache-2.0"
description = "mdbook preprocessor for index generation"
repository = "https://github.com/daviddrysdale/mdbook-indexing"
keywords = ["mdbook", "index"]
categories = ["text-processing"]

[dependencies]
clap = "4.5.*"
env_logger = "0.11.*"
log = "0.4.*"
mdbook-preprocessor = "0.5"
regex = "1.*"
serde_json = "1.*"
toml = "1.0.*"
